<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="Bracket_1">(</string>
    <string name="Bracket_2">)</string>
    <string name="Division">÷</string>
    <string name="Percent">%</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Multiply">×</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Minus">-</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Plus">+</string>
    <string name="Zero">0</string>
    <string name="Dot">.</string>
    <string name="Equal_To">=</string>
    <string name="del">DEL</string>
    <string name="Double_Zero">00</string>
    <string name="b1">(</string>
    <string name="b2">)</string>
    <string name="calculator">Calculator</string>
    <string name="calculator_app">Calculator App</string>
</resources>